@@ -117,7 +117,10 @@ public class UIWebView extends UIComponent implements SensorOwner, SensorLinkOwn
           this.sensorLink = new SensorLink();
           this.sensorLink.setSensorDTO(sensorDTO);
        } else {
-          sensorLink.clear();
+         if (sensorLink != null) {
+           sensorLink.clear();
+           sensorLink.setSensorDTO(null);
+         }
        }
     }
 
